--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
             width: 100%;
             /* Matcha bredden med sökfältet */
             padding: 5px;
-            border: 1px solid #ddd;
             border-radius: 0 0 25px 25px;
-            /* Rundade hörn endast på botten */
-            margin-top: -1px;
-            /* Ta bort mellanrum mellan fält och taggar */
+            /* Behåll rundade hörn endast på botten om så önskas */
+            margin-top: 0;
+            /* Ta bort mellanrummet mellan fält och taggar */
+            /* Ta bort border-egenskapen för att eliminera den vita konturen */
         }
 
         #data-container {
