gör rundade hör nedtill på sökfältet och sökknappen

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             background-color: white;
             color: black;
             outline: none;
-            border-radius: 25px 25px 0 0;
-            /* Rundade hörn endast på toppen */
+            border-radius: 25px;
+            /* Rundade hörn på alla sidor */
             width: 100%;
         }
 
@@ -64,8 +64,8 @@
             background-color: white;
             color: black;
             outline: none;
-            border-radius: 0 0 25px 25px;
-            /* Rundade hörn endast på botten */
+            border-radius: 25px;
+            /* Rundade hörn på alla sidor */
             cursor: pointer;
         }
 
