--- a/index.html
+++ b/index.html
@@ -241,6 +241,12 @@
             margin-right: 5px;
             border-radius: 3px;
             cursor: pointer;
+
+        }
+
+        .hidden-search {
+            transform: translateY(-100%);
+            transition: transform 0.3s;
         }
     </style>
 </head>
@@ -333,6 +339,18 @@
         }
 
         window.onload = loadData;
+
+        let lastScrollTop = 0;
+
+        window.addEventListener("scroll", function () {
+            var currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+            if (currentScroll > lastScrollTop) {
+                document.querySelector('.search-container').classList.add('hidden-search');
+            } else {
+                document.querySelector('.search-container').classList.remove('hidden-search');
+            }
+            lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
+        }, false);
 
     </script>
 
