--- a/index.html
+++ b/index.html
@@ -254,10 +254,28 @@
         .blur-background {
             filter: blur(5px);
         }
+
+        .logo-link {
+    position: fixed;
+    top: 10px; /* Justera avståndet från toppen */
+    left: 10px; /* Justera avståndet från vänsterkanten */
+    z-index: 3000; /* Se till att loggan alltid är överst */
+}
+
+.logo-link img {
+    height: 50px; /* Justera storleken på loggan */
+    width: auto; /* Behåller bildens aspektförhållande */
+}
+
     </style>
 </head>
 
 <body>
+
+    <a href="index.html" class="logo-link">
+        <img src="/images/testlogga.png" alt="Logga" />
+    </a>
+
     <div class="background-container"></div>
 
     <div class="search-container">
