samma som föregående

--- a/index.html
+++ b/index.html
@@ -256,24 +256,28 @@
         }
 
         .logo-link {
-    position: fixed;
-    top: 10px; /* Justera avståndet från toppen */
-    left: 10px; /* Justera avståndet från vänsterkanten */
-    z-index: 3000; /* Se till att loggan alltid är överst */
-}
+            position: fixed;
+            top: 10px;
+            /* Justera avståndet från toppen */
+            left: 10px;
+            /* Justera avståndet från vänsterkanten */
+            z-index: 3000;
+            /* Se till att loggan alltid är överst */
+        }
 
-.logo-link img {
-    height: 50px; /* Justera storleken på loggan */
-    width: auto; /* Behåller bildens aspektförhållande */
-}
-
+        .logo-link img {
+            height: 50px;
+            /* Justera storleken på loggan */
+            width: auto;
+            /* Behåller bildens aspektförhållande */
+        }
     </style>
 </head>
 
 <body>
 
     <a href="index.html" class="logo-link">
-        <img src="/images/testlogga.png" alt="Logga" />
+        <img src="images/testlogga.png" alt="Logga" />
     </a>
 
     <div class="background-container"></div>
