dölja ingredinser i resultat och visa dem i svart ruta endast när man svävar över instagraminlägget

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
             text-align: center;
             box-sizing: border-box;
             align-self: flex-start;
+            position: relative;
+            /* För att positionera ingredienslistan korrekt */
 
         }
 
@@ -128,15 +130,21 @@
         }
 
         .matratt-ingredienser {
-            height: 20px;
-            overflow: hidden;
-            position: relative;
-            background-color: rgba(255, 255, 255, 0.8);
+            display: none;
+            /* Gömmer ingredienslistan som standard */
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background-color: black;
+            color: white;
             padding: 10px;
-            margin: 5px 0;
-            white-space: nowrap;
-            border-radius: 10px;
-            /* Rundade hörn */
+            border-radius: 5px;
+            white-space: normal;
+            /* Bryter texten normalt */
+        }
+
+        .matratt:hover .matratt-ingredienser {
+            display: block; /* Visar ingredienslistan vid hover */
         }
 
         .matratt-ingredienser div {
