samma som föregående

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
             padding: 10px;
             position: absolute;
             top: 100%;
-            /* Startar precis under knappen */
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
+            /* Placerar rullistan precis under knappen */
+            left: 0;
+            width: 100%;
+            /* Full bredd av maträtt-container */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             max-height: 200px;
             overflow-y: auto;
