--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Lägg till denna länk i din head-tagg -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
 
     <style>
@@ -12,7 +12,7 @@
         html {
             height: 100%;
             margin: 0;
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Indie Flower', cursive;
         }
 
         .background-container {
@@ -298,6 +298,15 @@
             /* Justera storleken på loggan */
             width: auto;
             /* Behåller bildens aspektförhållande */
+        }
+
+        .matratt-title,
+        .ingrediens-knapp,
+        .ingrediens-lista {
+            color: white;
+            /* Vit text */
+            background-color: rgba(0, 0, 0, 0.8);
+            /* Svart bakgrund */
         }
     </style>
 </head>
