--- a/index.html
+++ b/index.html
@@ -265,12 +265,23 @@
         }
 
         .tag {
+            position: relative;
             background-color: #ddd;
             padding: 5px 10px;
             margin-right: 5px;
             border-radius: 3px;
             cursor: pointer;
+            display: inline-flex;
+            align-items: center;
 
+        }
+
+        .tag-close {
+            margin-left: 5px;
+            cursor: pointer;
+            border: none;
+            background: transparent;
+            font-size: 1rem;
         }
 
         .hidden-search {
@@ -382,7 +393,12 @@
 
         function updateTagContainer() {
             const container = document.querySelector('.tag-container');
-            container.innerHTML = selectedTags.map(tag => `<div class="tag">${tag}</div>`).join('');
+            container.innerHTML = selectedTags.map(tag => `
+        <div class="tag">
+            ${tag}
+            <button class="tag-close" onclick="removeTag('${tag}')">&times;</button>
+        </div>
+    `).join('');
         }
 
         function displayData(data) {
