öka avståndet mellan sökfält och sökresultat så att de inte vidrör varandra

--- a/index.html
+++ b/index.html
@@ -79,12 +79,10 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 20%;
-            /* Justerat för att skapa mer utrymme mellan sökfältet och resultatlistan */
+            margin-top: 30px;
+            /* Ökar avståndet till cirka 1,5 cm */
             padding-bottom: 50px;
-            /* Behåller det extra utrymmet längst ner */
             overflow: auto;
-            /* Behåller skrollfunktionen inom containern */
         }
 
 
