samma som föregående

--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 30px;
-            /* Ökar avståndet till cirka 1,5 cm */
+            margin-top: 25%;
+            /* Justerat för att skapa mer utrymme mellan sökfältet och resultatlistan */
             padding-bottom: 50px;
+            /* Behåller det extra utrymmet längst ner */
             overflow: auto;
+            /* Behåller skrollfunktionen inom containern */
         }
 
 
