uppdaterat texten i om oss-sidan

--- a/omoss.html
+++ b/omoss.html
@@ -90,7 +90,7 @@
 
     <div class="content">
         <h1>Om Oss</h1>
-        <p>Välkommen till Tallriken, din guide till underbara matupplevelser. Här delar vi med oss av våra bästa recept, tips och inspiration för att göra varje måltid till en fest. Vårt mål är att ge dig idéer och inspiration för att skapa minnesvärda måltider, oavsett om det är vardagsmat eller festliga tillfällen.</p>
+        <p>Välkommen till Tallriken, din guide till underbara matupplevelser. Här delar vi....</p>
         <img src="images/plate1.jpg" alt="Om Oss Bild" class="about-image">
     </div>
 
