--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -1,19 +1,139 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+
 <head>
-    <title>Tipsa Oss</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <title>Tipsa Oss - Tallriken</title>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
     <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-            /* Lägg till ytterligare stilar här */
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Indie Flower', cursive;
+            color: white; /* Vit text */
+            background-color: black; /* Svart bakgrund */
         }
-        /* Lägg till ytterligare CSS här om nödvändigt */
+
+        .background-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('/tallriken/images/matbakgrund1.jpeg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            z-index: -1;
+            opacity: 0.5; /* Gör bakgrunden något transparent */
+        }
+
+        .logo-link {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            z-index: 3000;
+        }
+
+        .logo-link img {
+            height: 50px;
+            width: auto;
+        }
+
+        .content {
+            margin-top: 100px;
+            padding: 20px;
+            text-align: center;
+            max-width: 800px; /* Maximal bredd på innehållet */
+            margin: 100px auto; /* Centrerar innehållet */
+            background: rgba(0, 0, 0, 0.8); /* Svart bakgrund med transparens */
+            border-radius: 10px; /* Rundade hörn */
+        }
+
+        .contact-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .contact-form label {
+            margin-bottom: 5px;
+        }
+
+        .contact-form input, .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            border: none;
+            margin-bottom: 10px;
+        }
+
+        .contact-form button {
+            padding: 10px 20px;
+            background-color: #f2f2f2;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .contact-form button:hover {
+            background-color: #ddd;
+        }
+
+        .footer-banner {
+            background-color: #000;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .footer-banner a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .footer-banner a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
+
 <body>
-    <h1>Om Oss</h1>
-    <p>Här kommer information om webbplatsen och skaparna.</p>
-    <!-- Lägg till mer innehåll här -->
+    <a href="index.html" class="logo-link">
+        <img src="images/testlogga.png" alt="Logga">
+    </a>
+
+    <div class="background-container"></div>
+
+    <div class="content">
+        <h1>Tipsa Oss</h1>
+        <p>Har du tips på fantastiska recept, intressanta mat-Instagramkonton eller potentiella samarbeten? Dela med dig av dina idéer! Fyll i formuläret nedan så hör vi av oss så snart vi kan.</p>
+        <form class="contact-form">
+            <label for="name">Ditt Namn:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Din E-post:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Ditt Meddelande:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <button type="submit">Skicka Tips</button>
+        </form>
+    </div>
+
+    <div class="footer-banner">
+        <a href="omoss.html">Om Oss</a>
+        <a href="tipsaoss.html">Tipsa Oss</a>
+    </div>
 </body>
+
 </html>
