--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,12 +6,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
     <style>
-        body, html {
+        body,
+        html {
             height: 100%;
             margin: 0;
             font-family: 'Indie Flower', cursive;
-            color: white; /* Vit text */
-            background-color: black; /* Svart bakgrund */
+            color: white;
+            /* Vit text */
+            background-color: black;
+            /* Svart bakgrund */
         }
 
         .background-container {
@@ -27,7 +29,8 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             z-index: -1;
-            opacity: 0.5; /* Gör bakgrunden något transparent */
+            opacity: 0.5;
+            /* Gör bakgrunden något transparent */
         }
 
         .logo-link {
@@ -46,10 +49,14 @@
             margin-top: 100px;
             padding: 20px;
             text-align: center;
-            max-width: 800px; /* Maximal bredd på innehållet */
-            margin: 100px auto; /* Centrerar innehållet */
-            background: rgba(0, 0, 0, 0.8); /* Svart bakgrund med transparens */
-            border-radius: 10px; /* Rundade hörn */
+            max-width: 800px;
+            /* Maximal bredd på innehållet */
+            margin: 100px auto;
+            /* Centrerar innehållet */
+            background: rgba(0, 0, 0, 0.8);
+            /* Svart bakgrund med transparens */
+            border-radius: 10px;
+            /* Rundade hörn */
         }
 
         .contact-form {
@@ -63,7 +70,8 @@
             margin-bottom: 5px;
         }
 
-        .contact-form input, .contact-form textarea {
+        .contact-form input,
+        .contact-form textarea {
             width: 100%;
             padding: 10px;
             border-radius: 5px;
@@ -116,18 +124,8 @@
     <div class="content">
         <h1>Tipsa Oss</h1>
         <p>Har du tips på fantastiska recept, intressanta mat-Instagramkonton eller potentiella samarbeten? Dela med dig av dina idéer! Fyll i formuläret nedan så hör vi av oss så snart vi kan.</p>
-        <form class="contact-form">
-            <label for="name">Ditt Namn:</label>
-            <input type="text" id="name" name="name" required>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdWEa12CJ098wjk7mLsfN-oZbaF5zqXtKuZWBJ85MOnaUN05A/viewform?embedded=true" width="640" height="764" frameborder="0" marginheight="0" marginwidth="0">Läser in …</iframe>
 
-            <label for="email">Din E-post:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Ditt Meddelande:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <button type="submit">Skicka Tips</button>
-        </form>
     </div>
 
     <div class="footer-banner">
