--- a/index.html
+++ b/index.html
@@ -40,11 +40,39 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 50%;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            /* Centrerar element vertikalt */
             z-index: 2000;
+        }
+
+        .input-button-container {
+            display: flex;
+            width: 100%;
+        }
+
+        .input-button-container input[type='text'] {
+            flex-grow: 1;
+            padding: 10px;
+            border: 1px solid #ddd;
+            background-color: white;
+            color: black;
+            outline: none;
+            border-radius: 25px 0 0 0;
+            /* Rundade hörn på vänster sida */
+        }
+
+        .input-button-container button {
+            padding: 10px 20px;
+            border: 1px solid #ddd;
+            background-color: white;
+            color: black;
+            outline: none;
+            border-radius: 0 25px 25px 0;
+            /* Rundade hörn på höger sida */
+            border-left: none;
+            /* Tar bort vänster border */
+            cursor: pointer;
         }
 
         .search-container input[type='text'] {
